# todolist

./: .coverage  .env  .gitignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 30508fff50cd_create_users_table.py  4e451f37cded_exercicio_02_aula_04.py  59ad67cbd6de_create_todos_table.py  a37804f0b448_fields_added_to_table_todos.py
tests/: conftest.py  test_auth.py  test_db.py  test_db.txt  test_main.py  test_security.py  test_todos.py  test_users.py
todolist/: database.py  main.py  models.py  schema.py  security.py  settings.py
todolist/routers/: auth.py  todos.py  users.py
